Updated Dr. Dindar's code